Fix job_toggle accordion and add spacing

--- a/css/ioi-oleochemical.webflow.css
+++ b/css/ioi-oleochemical.webflow.css
@@ -5327,6 +5327,7 @@ figcaption {
   flex-wrap: wrap;
   align-items: center;
   display: flex;
+  margin-bottom: 1rem;
 }
 
 .job_toggle.is-right {
